--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "React Select Checkbox",
+  "name": "react-select-checkbox",
   "private": false,
   "version": "0.0.0",
   "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "prepublishOnly": "npm run build"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.4.6",
@@ -31,12 +37,20 @@
     "eslint-plugin-storybook": "^0.6.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "sass": "^1.69.0",
     "storybook": "^7.4.6",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-dts": "^3.6.0",
+    "vite-plugin-lib-inject-css": "^1.3.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0"
+  },
+  "sideEffects": [
+    "**/*.css"
+  ]
 }
