preparing to public deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-select-checkbox",
+  "name": "@sidilabs/react-select-checkbox",
   "private": false,
   "version": "0.0.0",
   "type": "module",
