--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
-  "name": "@sidilabs/react-select-checkbox",
+  "name": "@sidilabs/react-datatable",
+  "description": "A react component to display data in a table",
   "private": false,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "author": {
+    "name": "Thyago Machado Cassimiro",
+    "email": "t.cassimiro@sidi.com.br",
+    "url": "https://github.com/ThyagoMC"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sidilabs/react-datatable.git"
+  },
+  "license": "MIT",
   "files": [
     "dist"
   ],
